kubernetes/bare-metal/karvdash.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
  name: karvdash
spec:
  rules:
  - host: 139.91.92.156.xip.io
    http:
      paths:
      - backend:
          serviceName: karvdash
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: karvdash
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: karvdash
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: karvdash
  labels:
    app: karvdash
spec:
  selector:
    matchLabels:
      app: karvdash
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: karvdash
        tier: frontend
    spec:
      containers:
      - image: docker-registry:5000/karvdash:latest
        name: karvdash
        ports:
        - containerPort: 80
          name: karvdash
        volumeMounts:
        - name: karvdash-persistent-storage
          mountPath: /db
        - name: docker-socket
          mountPath: /var/run/docker.sock
        - name: private-volume
          mountPath: /private
        - name: shared-volume
          mountPath: /shared
      volumes:
      - name: karvdash-persistent-storage
        persistentVolumeClaim:
          claimName: karvdash-pvc
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
      - name: private-volume
        hostPath:
          path: /mnt/nfs/private
      - name: shared-volume
        hostPath:
          path: /mnt/nfs/shared
